--- a/src/container/About/AboutContent/Aboutcontent.scss
+++ b/src/container/About/AboutContent/Aboutcontent.scss
@@ -103,6 +103,11 @@
         font-weight: 700;
         border-radius: 7px;
         font-family:'Roboto', sans-serif;
+        cursor: pointer;
+
+        &:hover{
+            box-shadow: 10px 0px 30px rgba(0,0,1,0.2);
+        }
     }
    
 }
@@ -143,8 +148,8 @@ section{
         }
 
         div:nth-child(1) {
-            height: 65%;
-            width: 66%;
+            height: 80%;
+            width: 80%;
           
         @media screen and (max-width: 1040px) {
             height: 65%;
@@ -158,7 +163,7 @@ section{
             img{
                 height: 100%;
                 width: 100%;
-                object-fit: contain;
+                object-fit: cover;
             }
           }
 
@@ -189,10 +194,30 @@ section{
 }
 
 .section_1{
- p{
+ span{
      margin-left: 10px;
-     font-weight: 700;
+     font-weight: 800;
+     font-size: 1.3rem;
      color: rgb(210, 18, 104);
  }
+ p{
+     font-weight: 500;
+     margin-left: 10px;
+     margin-top: 10px;
+ }
     
+}
+
+.reduceWidth{
+    flex-direction: row;
+
+    li{
+        width: 50%;
+    }
+
+    @media screen and(max-width:400px) {
+        li{
+            width: 100%;
+        }
+    }
 }
