--- a/src/container/About/AboutContent/Aboutcontent.scss
+++ b/src/container/About/AboutContent/Aboutcontent.scss
@@ -14,6 +14,20 @@
         height: 41rem;
     }   
 }
+// .about__content::before{
+//   content: "Read this -";
+//   background-color: rgb(223, 223, 223);
+//   box-shadow: 10px 0px 30px rgba(0,0,1,0.2);
+//   color: red;
+//   width: 65%;
+//   height: 60%;
+//   font-weight: bold;
+//   z-index: 10;
+//   position: absolute;
+// //   top: 0;
+// //   left: 0;
+// //   bottom: 0;
+// }
 
 .controllers{
     display: flex;
@@ -209,8 +223,9 @@ section{
 }
 
 .reduceWidth{
+    ul{
     flex-direction: row;
-
+    }
     li{
         width: 50%;
     }
@@ -218,6 +233,19 @@ section{
     @media screen and(max-width:400px) {
         li{
             width: 100%;
+        }
+    }
+}
+
+.about_mdfc{
+    // .section__image{
+    //     display: none;
+    // }
+    .section__content{
+        height: 100%;
+        p{
+            text-align: justify;
+            font-weight: 800;
         }
     }
 }
