--- a/src/container/Gallery/Gallery.scss
+++ b/src/container/Gallery/Gallery.scss
@@ -1,16 +1,22 @@
 .main_container{
-    display: flex;
+    display: none;
     justify-content: space-evenly;
     align-items: center;
    flex-wrap: wrap;
-
+   width: 100%;
+   height: 100%;
+   outline: 2px solid red;
+   
 }
 
 .image{
-    flex-basis: 20%;
+    height: 20rem;
+    width: 20rem;
+    outline: 2px solid red;
     padding: 10px;
     img{
         width: 100%;
         height: 100%;
     }
 }
+
