--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -1,6 +1,7 @@
 .home_special{
     // background: url('../../assets/bgIMG.jpg');
-    background: url('../../assets/trial_6(final).jpg');
+    // background: url('../../assets/trial_6(final).jpg');
+    background: url('../../assets/trial_2.jpg');
     width: 100vw;
     height: 100vh;
     object-fit: contain;
