--- a/src/container/Gallery/Gallery.scss
+++ b/src/container/Gallery/Gallery.scss
@@ -33,8 +33,9 @@
 
 .image{
     height: 25rem;
-    
     width: 25rem;
+    transition: 1s;
+    cursor: pointer;
     @media screen and(max-width:955px) {
         height: 20rem;
         width: 20rem;
@@ -47,6 +48,11 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
+    }
+
+    &:hover{
+        transform: scale(1.3);
+        z-index: 2;
     }
 }
 
