--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -1,21 +1,21 @@
 .home_special{
-    // background: url('../../assets/bgIMG.jpg');
-    // background: url('../../assets/trial_6(final).jpg');
-    background: url('../../assets/trial_2.jpg');
+
+    background-image: url('../../assets/trial_6(final).jpg');
+  
     width: 100vw;
     height: 100vh;
     object-fit: contain;
     background-size: 10%;
     background-repeat: no-repeat;
 	background-size: cover; 
-	background-position: center center;
-    // background-attachment: fixed;
-
-
-    @media screen and (max-wdth: 480px) {
-        width: 29rem;
+	background-position: 50% 50%;
+    // image-rendering: auto;
+//   image-rendering: crisp-edges;
+  image-rendering: -webkit-optimize-contrast;
+    // @media screen and (min-wdth: 550px) {
+    //     background: url('../../assets/trial_6(final).jpg');
         
-    } 
+    // } 
 }
 
 .app__header{
@@ -40,13 +40,12 @@
 }
 
 .app__header-info{
-    // flex: 0.7;
+
     display: flex;
-    // flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100%;
-    // width: 100%;
+
     
     @media screen and (max-width: 1300px) {
         transform: translateX(272px) translateZ(0px) !important;
