--- a/src/container/About/Enquiry.scss
+++ b/src/container/About/Enquiry.scss
@@ -92,9 +92,9 @@ select{
       }
 }
 
-#afterSubmit{
+.message_div{
     display: none;
-    width: 80%;
+    width: 100%;
     text-align: center;
     font-weight: 800 !important;
     color: rgb(255, 0, 128);
